feat(ui): selected preset ring + live sync with storage

--- a/popup.html
+++ b/popup.html
@@ -77,6 +77,8 @@
       .theme-card:hover { transform: translateY(-1px); box-shadow: 0 10px 30px rgba(0,0,0,0.22); }
       .theme-card:active { transform: translateY(0); }
 
+      .selected-ring { position: absolute; inset: 0; border-radius: 14px; border: 2px solid rgba(77,141,255,0.95); pointer-events: none; box-shadow: inset 0 0 0 1px rgba(255,255,255,0.25); }
+
       .theme-row { display: flex; align-items: center; justify-content: space-between; gap: 8px; }
       .theme-title { font-weight: 700; font-size: 12.5px; letter-spacing: .2px; display: flex; align-items: center; gap: 8px; }
       .dot { width: 12px; height: 12px; border-radius: 50%; border: 1px solid var(--glass-border); }
